Change meta describtion

--- a/index.html
+++ b/index.html
@@ -24,23 +24,22 @@ rel="stylesheet">
 
 <meta property="og:title">
 <meta property="og:type" content="article">
-<meta property="og:image" content="http://res.cloudinary.com/oredev/image/upload/v1559649721/2019/html/facebook.jpg">
-<meta property="og:image:secure_url" content="https://res.cloudinary.com/oredev/image/upload/v1559649721/2019/html/facebook.jpg">
-<meta name="og:description" content="Øredev Developer Conference 6-8 Nov 2019, Malmö, Sweden. Øredev is the Premier developer's conference in Europe, focused on the whole software development process.">
+<meta property="og:image" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_100/v1573118127/matchplay/matchplay-new-logo-2020.png">
+<meta property="og:image:secure_url" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_100/v1573118127/matchplay/matchplay-new-logo-2020.png">
+<meta name="og:description" content="Matchplay Invitational är en matchspelstävling för par med officiellt handikapp. Par kan vara män, kvinnor eller mix. Tävlingen spelas i Sverige på golfklubbar anslutna till Svenska Golfförbundet.">
 
-<meta property="og:site_name" content="Øredev">
+<meta property="og:site_name" content="Matchplay">
 <meta property="og:url">
-<meta property="fb:admins" content="763245241">
-<meta property="og:email" content="info@oredev.org">
-<meta property="og:phone_number" content="+46 40 - 602 31 03">
-<meta property="og:street-address" content="Hans Michelsensgatan 10">
-<meta property="og:postal-code" content="211 20">
-<meta property="og:locality" content="Malmö">
+<meta property="og:email" content="info@matchplay.se">
+<meta property="og:phone_number" content="010 - 522 00 06">
+<meta property="og:street-address" content="Hantverkaregatan 3">
+<meta property="og:postal-code" content="262 63">
+<meta property="og:locality" content="Ängelholm">
 <meta property="og:country-name" content="Sweden">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title">
-<meta name="twitter:description" content="Øredev Developer Conference 6-8 Nov 2019, Malmö, Sweden. Øredev is the Premier developer's conference in Europe, focused on the whole software development process.">
-<meta name="twitter:image" content="https://res.cloudinary.com/oredev/image/upload/v1559649721/2019/html/twitter.jpg">
+<meta name="twitter:description" content="Matchplay Invitational är en matchspelstävling för par med officiellt handikapp. Par kan vara män, kvinnor eller mix. Tävlingen spelas i Sverige på golfklubbar anslutna till Svenska Golfförbundet.">
+<meta name="twitter:image" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_100/v1573118127/matchplay/matchplay-new-logo-2020.png">
 
 </head>
 <body>
