--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ rel="stylesheet">
 <meta http-equiv="CACHE-CONTROL" content="NO-CACHE">
 <meta http-equiv="PRAGMA" content="NO-CACHE">
 <meta http-equiv="EXPIRES" content="0">
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
 <meta property="og:title">
 <meta property="og:type" content="article">
