--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ rel="stylesheet">
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_100/v1573118127/matchplay/matchplay-new-logo-2020.png">
 <meta property="og:image:secure_url" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_100/v1573118127/matchplay/matchplay-new-logo-2020.png">
-<meta name="og:description" content="Matchplay Invitational är en matchspelstävling för par med officiellt handikapp. Par kan vara män, kvinnor eller mix. Tävlingen spelas i Sverige på golfklubbar anslutna till Svenska Golfförbundet.">
+<meta name="og:description" content="Matchplay är en matchspelstävling för par med officiellt handikapp. Par kan vara män, kvinnor eller mix. Tävlingen spelas i Sverige på golfklubbar anslutna till Svenska Golfförbundet.">
 
 <meta property="og:site_name" content="Matchplay">
 <meta property="og:url">
@@ -39,7 +39,7 @@ rel="stylesheet">
 <meta property="og:country-name" content="Sweden">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title">
-<meta name="twitter:description" content="Matchplay Invitational är en matchspelstävling för par med officiellt handikapp. Par kan vara män, kvinnor eller mix. Tävlingen spelas i Sverige på golfklubbar anslutna till Svenska Golfförbundet.">
+<meta name="twitter:description" content="Matchplay är en matchspelstävling för par med officiellt handikapp. Par kan vara män, kvinnor eller mix. Tävlingen spelas i Sverige på golfklubbar anslutna till Svenska Golfförbundet.">
 <meta name="twitter:image" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_100/v1573118127/matchplay/matchplay-new-logo-2020.png">
 
 </head>
