teams/games func.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 rel="stylesheet">
 
+<link href="/static/all.min.css" rel="stylesheet"> <!--load all styles -->
+
 <meta http-equiv="CACHE-CONTROL" content="NO-CACHE">
 <meta http-equiv="PRAGMA" content="NO-CACHE">
 <meta http-equiv="EXPIRES" content="0">
