--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@ rel="stylesheet">
 <meta http-equiv="EXPIRES" content="0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-<meta property="og:title">
-<meta property="og:type" content="article">
-<meta property="og:image" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_100/v1573118127/matchplay/matchplay-new-logo-2020.png">
-<meta property="og:image:secure_url" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_100/v1573118127/matchplay/matchplay-new-logo-2020.png">
-<meta name="og:description" content="Matchplay är en matchspelstävling för par med officiellt handikapp. Par kan vara män, kvinnor eller mix. Tävlingen spelas i Sverige på golfklubbar anslutna till Svenska Golfförbundet.">
+<meta property="og:title" content="Matchplay 2021">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_200/v1573118127/matchplay/matchplay-new-logo-2020.png">
+<meta property="og:image:secure_url" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_200/v1573118127/matchplay/matchplay-new-logo-2020.png">
+<meta property="og:description" content="Matchplay är en matchspelstävling för par med officiellt handikapp. Par kan vara män, kvinnor eller mix. Tävlingen spelas i Sverige på golfklubbar anslutna till Svenska Golfförbundet.">
 
 <meta property="og:site_name" content="Matchplay">
-<meta property="og:url">
+<meta property="og:url" content="https://www.matchplay.se">
 <meta property="og:email" content="info@matchplay.se">
 <meta property="og:phone_number" content="010 - 522 00 07">
 <meta property="og:street-address" content="Hantverkaregatan 3">
@@ -54,7 +54,7 @@ rel="stylesheet">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title">
 <meta name="twitter:description" content="Matchplay är en matchspelstävling för par med officiellt handikapp. Par kan vara män, kvinnor eller mix. Tävlingen spelas i Sverige på golfklubbar anslutna till Svenska Golfförbundet.">
-<meta name="twitter:image" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_100/v1573118127/matchplay/matchplay-new-logo-2020.png">
+<meta name="twitter:image" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_200/v1573118127/matchplay/matchplay-new-logo-2020.png">
 
 </head>
 <body>
