--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@ rel="stylesheet">
 
 <meta property="og:title" content="Matchplay 2022">
 <meta property="og:type" content="website">
-<meta property="og:image" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_500/v1573118127/matchplay/matchplay-new-logo-2020.png">
-<meta property="og:image:secure_url" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_500/v1573118127/matchplay/matchplay-new-logo-2020.png">
-<meta property="og:description" content="Matchplay är en matchspelstävling för par med officiellt handikapp. Par kan vara män, kvinnor eller mix. Tävlingen spelas i Sverige på golfklubbar anslutna till Svenska Golfförbundet.">
+<meta property="og:image" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_100/v1665478419/matchplay/igg/Matchplay-Indoor-ruff-IGG-2023.png">
+<meta property="og:image:secure_url" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_100/v1665478419/matchplay/igg/Matchplay-Indoor-ruff-IGG-2023.png">
+<meta property="og:description" content="Matchplay skapar ännu en tävling för alla som vill hålla svingen och tävlandet vid liv under de mörka månaderna. Mellan 1 januari och 15 april 2023 spelas tävlingen på ett 30-tal olika inomhusanläggningar runtom i Sverige.">
 
-<meta property="og:site_name" content="Matchplay">
-<meta property="og:url" content="https://www.matchplay.se">
+<meta property="og:site_name" content="Matchplay Indoor">
+<meta property="og:url" content="https://indoor.matchplay.se">
 <meta property="og:email" content="info@matchplay.se">
 <meta property="og:phone_number" content="010 - 522 00 07">
 <meta property="og:street-address" content="Hantverkaregatan 3">
@@ -52,8 +52,8 @@ rel="stylesheet">
 <meta property="og:country-name" content="Sweden">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title">
-<meta name="twitter:description" content="Matchplay är en matchspelstävling för par med officiellt handikapp. Par kan vara män, kvinnor eller mix. Tävlingen spelas i Sverige på golfklubbar anslutna till Svenska Golfförbundet.">
-<meta name="twitter:image" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_200/v1573118127/matchplay/matchplay-new-logo-2020.png">
+<meta name="twitter:description" content="Matchplay skapar ännu en tävling för alla som vill hålla svingen och tävlandet vid liv under de mörka månaderna. Mellan 1 januari och 15 april 2023 spelas tävlingen på ett 30-tal olika inomhusanläggningar runtom i Sverige.">
+<meta name="twitter:image" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_100/v1665478419/matchplay/igg/Matchplay-Indoor-ruff-IGG-2023.png">
 
 
 <!-- Facebook Pixel Code -->
