--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ rel="stylesheet">
 <meta http-equiv="EXPIRES" content="0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-<meta property="og:title" content="Matchplay 2022">
+<meta property="og:title" content="Matchplay Indoor 2023">
 <meta property="og:type" content="website">
 <meta property="og:image" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_100/v1665478419/matchplay/igg/Matchplay-Indoor-ruff-IGG-2023.png">
 <meta property="og:image:secure_url" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_100/v1665478419/matchplay/igg/Matchplay-Indoor-ruff-IGG-2023.png">
