--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-153118418-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6J5WWCLJV2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-153118418-1');
+  gtag('config', 'G-6J5WWCLJV2');
 </script>
 
 <meta charset="utf-8">
