--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-6J5WWCLJV2"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GH2Y9V1HKM"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-6J5WWCLJV2');
+  gtag('config', 'G-GH2Y9V1HKM');
 </script>
 
 <meta charset="utf-8">
@@ -36,14 +36,14 @@ rel="stylesheet">
 <meta http-equiv="EXPIRES" content="0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-<meta property="og:title" content="Matchplay Indoor 2023">
+<meta property="og:title" content="Matchplay Local 2023">
 <meta property="og:type" content="website">
-<meta property="og:image" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_100/v1665478419/matchplay/igg/Matchplay-Indoor-ruff-IGG-2023.png">
-<meta property="og:image:secure_url" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_100/v1665478419/matchplay/igg/Matchplay-Indoor-ruff-IGG-2023.png">
-<meta property="og:description" content="Matchplay skapar ännu en tävling för alla som vill hålla svingen och tävlandet vid liv under de mörka månaderna. Mellan 8 januari och 15 april 2023 spelas tävlingen på ett 30-tal olika inomhusanläggningar runtom i Sverige.">
+<meta property="og:image" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_100/v1688979193/matchplay/local/Matchplay_logo_PNG_2023.png">
+<meta property="og:image:secure_url" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_100/v1688979193/matchplay/local/Matchplay_logo_PNG_2023.png">
+<meta property="og:description" content="Matchplay Local Series är en matchspelstävling med 64 startande lag och där det vinnande laget från respektive Local Series (Stockholm, Göteborg och Malmö) gör upp om titeln i en matchspelsserie mellan 22-26 oktober på Golf Le Fonti i Bologna, Italien.">
 
-<meta property="og:site_name" content="Matchplay Indoor">
-<meta property="og:url" content="https://indoor.matchplay.se">
+<meta property="og:site_name" content="Matchplay Local">
+<meta property="og:url" content="https://local.matchplay.se">
 <meta property="og:email" content="info@matchplay.se">
 <meta property="og:phone_number" content="010 - 522 00 07">
 <meta property="og:street-address" content="Hantverkaregatan 3">
@@ -53,7 +53,7 @@ rel="stylesheet">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title">
 <meta name="twitter:description" content="Matchplay skapar ännu en tävling för alla som vill hålla svingen och tävlandet vid liv under de mörka månaderna. Mellan 8 januari och 15 april 2023 spelas tävlingen på ett 30-tal olika inomhusanläggningar runtom i Sverige.">
-<meta name="twitter:image" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_100/v1665478419/matchplay/igg/Matchplay-Indoor-ruff-IGG-2023.png">
+<meta name="twitter:image" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_100/v1688979193/matchplay/local/Matchplay_logo_PNG_2023.png">
 
 
 <!-- Facebook Pixel Code -->
