skane name change

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ rel="stylesheet">
 <meta property="og:type" content="website">
 <meta property="og:image" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_100/v1688979193/matchplay/local/Matchplay_logo_PNG_2023.png">
 <meta property="og:image:secure_url" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_100/v1688979193/matchplay/local/Matchplay_logo_PNG_2023.png">
-<meta property="og:description" content="Matchplay Local Series är en matchspelstävling med 32 startande lag och där det vinnande laget från respektive Local Series (Stockholm och Malmö) gör upp om titeln i en matchspelsserie mellan 22-26 oktober på Golf Le Fonti i Bologna, Italien.">
+<meta property="og:description" content="Matchplay Local Series är en matchspelstävling med 32 startande lag och där det vinnande laget från respektive Local Series (Stockholm och Skåne) gör upp om titeln i en matchspelsserie mellan 22-26 oktober på Golf Le Fonti i Bologna, Italien.">
 
 <meta property="og:site_name" content="Matchplay Local">
 <meta property="og:url" content="https://local.matchplay.se">
