--- a/index.html
+++ b/index.html
@@ -3,23 +3,15 @@
 <head>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-GH2Y9V1HKM"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-GH2Y9V1HKM');
-</script>
 
 <meta charset="utf-8">
 <title></title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <!-- <link href='/static/index.ico' rel="icon" Atype="image/x-icon" /> -->
-<link rel="apple-touch-icon" sizes="180x180" href="static/favicon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="static/favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="static/favicon/favicon-16x16.png">
-<link rel="mask-icon" href="static/favicon/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
 
@@ -36,45 +28,12 @@ rel="stylesheet">
 <meta http-equiv="EXPIRES" content="0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-<meta property="og:title" content="Matchplay Local 2023">
+<meta property="og:title" content="Dormy Helsingborg Open 2024">
 <meta property="og:type" content="website">
-<meta property="og:image" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_100/v1688979193/matchplay/local/Matchplay_logo_PNG_2023.png">
-<meta property="og:image:secure_url" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_100/v1688979193/matchplay/local/Matchplay_logo_PNG_2023.png">
-<meta property="og:description" content="Matchplay Local Series är en matchspelstävling med 32 startande lag och där det vinnande laget från respektive Local Series (Stockholm och Skåne) gör upp om titeln i en matchspelsserie mellan 22-26 oktober på Golf Le Fonti i Bologna, Italien.">
-
-<meta property="og:site_name" content="Matchplay Local">
-<meta property="og:url" content="https://local.matchplay.se">
-<meta property="og:email" content="info@matchplay.se">
-<meta property="og:phone_number" content="08-120 050 10">
-<meta property="og:street-address" content="Hantverkaregatan 3">
-<meta property="og:postal-code" content="262 63">
-<meta property="og:locality" content="Ängelholm">
-<meta property="og:country-name" content="Sweden">
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title">
-<meta name="twitter:image" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,w_100/v1688979193/matchplay/local/Matchplay_logo_PNG_2023.png">
-
-
-<!-- Facebook Pixel Code -->
-<script>
-    !function(f,b,e,v,n,t,s)
-    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-    n.queue=[];t=b.createElement(e);t.async=!0;
-    t.src=v;s=b.getElementsByTagName(e)[0];
-    s.parentNode.insertBefore(t,s)}(window,document,'script',
-    'https://connect.facebook.net/en_US/fbevents.js');
-     fbq('init', '934521193293368');
-    fbq('track', 'PageView');
-    </script>
-    
-    <noscript>
-     <img height="1" width="1" 
-    src="facebook.com/tr?id=934521193293368&ev=PageView
-    &noscript=1"/>
-    </noscript>
-    <!-- End Facebook Pixel Code -->
+<meta property="og:image" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,h_70/v1710237483/Allerum/dormy_open_2024.png">
+<meta property="og:image:secure_url" content="https://res.cloudinary.com/dn3hzwewp/image/upload/c_scale,h_70/v1710237483/Allerum/dormy_open_2024.png">
+<meta property="og:description" content="Shuttle service for golfers during Dormy Helsingborg Open 2024 at Allerum Golfklubb Sweden.">
+<meta property="og:site_name" content="Dormy Helsingborg Open 2024">
 
 </head>
 <body>
